# read-table

./: README.md  pyproject.toml
read_table/: __init__.py  consts.py  elements.py  matrix.py  parser.py  table.py
tests/: test_read_table.py
