[tool.poetry]
name = "read-table"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
mypy = "^0.990"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
isort = "^5.10.1"
types-beautifulsoup4 = "^4.11.6"
requests = "^2.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
allow_redefinition = true

[tool.isort]
profile = "black"
